--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <title>My application</title>
    <meta http-equiv="X-UA-Compatible" content="ie=edge;ie=10;chrome=1">
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   <base env="local:/;prod:/front/">
+   <base env="local:/;prod:/">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    <link type="text/css" href="http://3el.github.io/front/dist/front.css" rel="stylesheet">
    <link type="text/css" href="http://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
