--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
  <head>
-   <title>My application</title>
+   <title>Aramean Institute</title>
    <meta http-equiv="X-UA-Compatible" content="ie=edge;ie=10;chrome=1">
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <base env="local:/;prod:/">
@@ -15,7 +15,7 @@
    <header></header>
    <nav></nav>
    <aside></aside>
-   <main include="home.html"></main>
+   <main class="flc" include="home.html"></main>
    <aside></aside>
    <footer></footer>
  </body>
