--- a/index.html
+++ b/index.html
@@ -1,22 +1,39 @@
 <!doctype html>
-<html lang="en">
- <head>
-   <title>Aramean Institute</title>
-   <meta http-equiv="X-UA-Compatible" content="ie=edge;ie=10;chrome=1">
-   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-   <base env="local:/;prod:/">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <link type="text/css" href="http://3el.github.io/front/dist/front.css" rel="stylesheet">
-   <link type="text/css" href="http://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
-   <link type="text/css" href="assets/css/theme.css" rel="stylesheet">
-   <script src="http://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json"></script>
- </head>
- <body>
-   <header></header>
-   <nav></nav>
-   <aside></aside>
-   <main class="flc" include="home.html"></main>
-   <aside></aside>
-   <footer></footer>
- </body>
+<html lang="en" cache="no">
+<head>
+    <title>Front</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge;ie=10;chrome=1" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <base env="local:/;prod:/front/">
+    <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
+    <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css?4" rel="stylesheet">
+    <link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">
+    <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>
+</head>
+<body class="bg">
+
+    <header>
+        <nav class="topbar dark shade h3 gap2- test-" selective="true">
+            <button class="xl_du rounded h0 f2" onclick="dom.toggle('aside?tag=0')">≡</button>
+            <a class="fr" href="#" key="2">Membership</a>
+            <a href="#" key="3">Contact</a>
+        </nav>
+    </header>
+
+    <nav class="topbar bgred h4_5 gap2- test-" selective="true">
+        <button class="xl_du rounded h0 f2" onclick="dom.toggle('aside?tag=0')">≡</button>
+        <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
+        <a href="documentation.html" key="1">Test</a>
+        <a href="icons.html" key="2">Test</a>
+        <a href="examples.html" key="3">Test</a>
+    </nav>
+    <aside class="xl_dn"></aside>
+    <main class="pauto flc" include="home.html"></main>
+    <aside class="lg_dn"></aside>
+    <footer>
+        <div eventlistener="offline" eventaction="dom.create('div', ['id=offline', 'className=alert pf b1 l1 bcred white snack', 'innerHTML=<i class=icon>⚠</i> Connection lost...'], 'footer')"></div>
+        <div eventlistener="online" eventaction="dom.hide('offline')"></div>
+    </footer>
+</body>
 </html>
