--- a/index.html
+++ b/index.html
@@ -14,14 +14,13 @@
 <body class="bg">
 
     <header>
-        <nav class="topbar dark shade h3 gap2- test-" selective="true">
-            <button class="xl_du rounded h0 f2" onclick="dom.toggle('aside?tag=0')">≡</button>
+        <nav class="topbar light shade h3 gap2- test-" selective="true">
             <a class="fr" href="#" key="2">Membership</a>
-            <a href="#" key="3">Contact</a>
+            <a class="pr1" href="#" key="3">Contact</a>
         </nav>
     </header>
 
-    <nav class="topbar bgred h4_5 gap2- test-" selective="true">
+    <nav class="topbar bcred shade h4_5 gap2- test-" selective="true">
         <button class="xl_du rounded h0 f2" onclick="dom.toggle('aside?tag=0')">≡</button>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a href="documentation.html" key="1">Test</a>
