--- a/home.html
+++ b/home.html
@@ -1,2 +1,4 @@
-<h1>Aramean Institute</h1>
-<h3>The Institute of the Aramean people</h3>
+<section class="h100 w100 bcred pauto flc">
+    <h1>Aramean Institute</h1>
+    <h3>The Institute of the Aramean people</h3>
+</section>
