--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <nav class="topbar bcred h4_5 gap2- test-" selective="true">
+    <nav class="topbar white shade h4_5 gap2- test-" selective="true">
         <button class="xl_du rounded h0 f2" onclick="dom.toggle('aside?tag=0')">≡</button>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a href="documentation.html" key="1">Test</a>
@@ -28,7 +28,7 @@
         <a href="examples.html" key="3">Test</a>
     </nav>
     <aside class="xl_dn"></aside>
-    <main class="pauto flc" include="home.html"></main>
+    <main include="home.html"></main>
     <aside class="lg_dn"></aside>
     <footer>
         <div eventlistener="offline" eventaction="dom.create('div', ['id=offline', 'className=alert pf b1 l1 bcred white snack', 'innerHTML=<i class=icon>⚠</i> Connection lost...'], 'footer')"></div>
