--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body class="bg">
 
     <header>
-        <nav class="topbar light shade h3 gap2- test- z09" selective="true">
+        <nav class="topbar light shade05 h3 gap2- test- z09" selective="true">
             <a class="fr" href="#" key="2">Membership</a>
             <a class="pr1" href="#" key="3">Contact</a>
         </nav>
