--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" cache="no">
 <head>
-    <title>Front</title>
+    <title>Aramean Institute</title>
     <meta http-equiv="X-UA-Compatible" content="ie=edge;ie=10;chrome=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,14 +14,14 @@
 <body class="bg">
 
     <header>
-        <nav class="topbar light shade05 h3 gap2- test- z09" selective="true">
+        <nav class="topbar light shade05 h4 gap2- test- z09" selective="true">
             <a class="fr" href="#" key="2">Membership</a>
-            <a class="pr1" href="#" key="3">Contact</a>
+            <a class="pr2" href="#" key="3">Contact</a>
         </nav>
     </header>
 
     <nav class="topbar white shade h4_5 gap2- test-" selective="true">
-        <button class="xl_du rounded h0 f2" onclick="dom.toggle('aside?tag=0')">≡</button>
+        <button class="xl_du h0 f2" onclick="dom.toggle('aside?tag=0')">≡</button>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a href="documentation.html" key="1">Test</a>
         <a href="icons.html" key="2">Test</a>
