--- a/home.html
+++ b/home.html
@@ -1,4 +1,7 @@
-<section class="h100 w100 bcred pauto flc">
+<section class="hm100 w100 bcred pauto flc">
     <h1>Aramean Institute</h1>
     <h3>The Institute of the Aramean people</h3>
+</section>
+
+<section class="hm100 w100">
 </section>
