--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <nav class="topbar white shade h4_5 gap2- test-" selective="true">
         <button class="xl_du h0 f2" onclick="dom.toggle('aside?tag=0')">≡</button>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
-        <a href="documentation.html" key="1">Test</a>
-        <a href="icons.html" key="2">Test</a>
-        <a href="examples.html" key="3">Test</a>
+        <a href="research/linguistics" key="1">Linguistics</a>
+        <a href="research/race-ethnicity/" key="2">Race and Ethnicity</a>
+        <a href="research/software-technology/" key="3">Software Technology</a>
     </nav>
     <aside class="xl_dn"></aside>
     <main include="home.html"></main>
