--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
 
-    <nav class="topbar white shade h4_5 gap2- test-" selective="true">
+    <nav class="topbar white shade h4_5 gap2- sred- test-" selective="true">
         <button class="xl_du h0 f2" onclick="dom.toggle('aside?tag=0')">≡</button>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a href="research/linguistics" key="1">Linguistics</a>
