--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
         <nav class="topbar light shade05 h4 gap2- test- z09" selective="true">
             <a class="fr" href="#" key="2">Membership</a>
+            <a class="pr2" href="about.html" key="3">About</a>
             <a class="pr2" href="#" key="3">Contact</a>
         </nav>
     </header>
