--- a/about.html
+++ b/about.html
@@ -1,7 +1,42 @@
+<!--<script src="//localhost:8000/dist/front.js" title="About us" template="true"></script>-->
+<script src="https://3el.github.io/front/dist/front.js" title="About us" template="true"></script>
+
 <template>
-    <head></head>
+    <aside index="0"></aside>
+    <aside index="1"></aside>
 </template>
-<section class="pauto">
-    <h2>About us</h2>
-    The Aramean Institute of Arameans follows the principles of Science and has built the foundation on academic studies made by world-leading and respected scholars.
-</section>
+<div class="alert banner br0 pauto pt2 pb2 bcred white-">
+    <h1>About us</h1>
+</div>
+<article class="pauto">
+    <section>
+        <h2>Mission</h2>
+        <p>Our mission is to increase the awareness of Arameans to the outside world and provide reliable-trusted knowledge about the Aramean people.</p>
+        <p>It includes correcting Non-Academic studies or tackling misleading knowledge about the Arameans or related to the people so that we may preserve and protect the ancient heritage and language.</p>
+        <br>
+        <p>We work with culture, technology, education, science, and business to strengthen relationships and development within the private, public, and voluntary sectors.</p>
+    </section>
+    <section class="mt2">
+        <h2>History</h2>
+        <p>The instutute was established 2020 by Josef Gabrielsson in Sweden.</p>
+    </section>
+    <section class="mt2">
+        <h2>Principles</h2>
+        <p>The Aramean Institute of Arameans follows the principles of Science and has built the foundation on academic studies made by reliable, respected, and world-leading scholars.
+        <br><br>
+        <p>The institute rejects:</p>
+        <ul class="list">
+            <li>Theories outside the academic fields.</li>
+            <li>Statements and claims based on fanatism or rationalism.</li>
+            <li>Propaganda or political agendas.</li>
+        </ul>
+    </section>
+    <section class="mt2">
+        <h2>Financing</h2>
+        <p>The Institute is financied by Aramean organizations located in different parts of the world.</p>
+    </section>
+    <section class="mt2">
+        <h2>Contributors</h2>
+        <p>Syriacist and Aramaicist</p>
+    </section>
+</article>
