--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
-<section class="hm100 w100 bcred pauto flc">
-    <h1>Aramean Institute</h1>
-    <h3>The Institute of the Aramean people</h3>
+<section class="hm100 w100 bcred pauto flc white-">
+    <h1>Aram and Israel relations</h1>
+    <h3>"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
 </section>
 
 <section class="hm100 w100">
