--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
     <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
     <link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">
     <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>
+    <!--<script src="//localhost:8000/dist/front.js" lib="xhr;popup;nav;json;drag;i18n;physics"></script>-->
 </head>
 <body class="bg">
 
     <header>
+        <form>
+            
+        </form>
         <nav class="topbar light shade05 h4 gap2- test- z09" selective="true">
-            <a class="fr" href="#" key="2">Membership</a>
+            <a class="fr" href="membership.html" key="2">Membership</a>
             <a class="pr2" href="about.html" key="3">About</a>
-            <a class="pr2" href="#" key="3">Contact</a>
+            <a class="pr2" href="contact.html" key="3">Contact</a>
         </nav>
     </header>
 
