--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -1,4 +1,4 @@
-<script src="dist/front.js" title="Documentation" onload="dom.class('body?tag', 'remove', 'bg')" template="true"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Race and Ethnicity" template="true"></script>
 
 <template>
     <aside index="0">
@@ -64,6 +64,5 @@
     <br>
     <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Jordan, Sweden, Germany, France, Georgia, Iran, Ukraine, Brazil.</p>
 </section>
-
 
 </article>
