--- a/home.html
+++ b/home.html
@@ -1,7 +1,20 @@
-<section class="hm100 w100 bcred pauto flc white-">
-    <h1>Aram and Israel relations</h1>
-    <h3>"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
-</section>
+<article class="hm100 bcred white dac" slide="true;rotate">
+    <section class="hm100 w100 pauto slide">
+        <h1>Aram and Israel relations</h1>
+        <h3 class="beige">"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
+        <button class="p1 bcyellow red mt1 br05">Read more</button>
+    </section>
+    <section class="hm100 w100 pauto slide">
+        <h1>Kaldu-Arameans</h1>
+        <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu conquering the Assyrian Empire."</h3>
+    </section>
+    <div class="pa yellow b1" selective="true">
+        <a class="icon48 dot" onclick="slideTo(1)">&#9679;</a>
+        <a class="icon48 dot" onclick="slideTo(2)">&#9679;</a>
+    </div>
+</article>
 
-<section class="hm100 w100">
-</section>
+<article class="hm100">
+    <section class="hm100 w100">
+    </section>
+</article>
