--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
         <h1>Kaldu-Arameans</h1>
         <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu conquering the Assyrian Empire."</h3>
     </section>
-    <div class="pa yellow b1" selective="true">
-        <a class="icon48 dot" onclick="slideTo(1)">&#9679;</a>
+    <div class="pa yellow swhite- b1 w100 flc" selective="true">
+        <a class="icon48 dot sel" onclick="slideTo(1)">&#9679;</a>
         <a class="icon48 dot" onclick="slideTo(2)">&#9679;</a>
     </div>
 </article>
