--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<article class="hm100 bcred white dac" slide="true;rotate">
+<article class="hm100 bcred white dac" slide="[{ athing: 'quack', dohickey: 3 }]">
     <section class="hm100 w100 pauto slide">
         <h1>Aram and Israel relations</h1>
         <h3 class="beige">"Arameans and the Hebrew Patriarchs have shared origins and marriage ties existed between the peoples."</h3>
@@ -6,7 +6,7 @@
     </section>
     <section class="hm100 w100 pauto slide">
         <h1>Kaldu-Arameans</h1>
-        <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu conquering the Assyrian Empire."</h3>
+        <h3 class="beige">"Chaldeans are Arameans from the tribe of Kaldu or (Kasdu) conquering and destroying the Assyrian Empire."</h3>
     </section>
     <div class="pa yellow swhite- b1 w100 flc" selective="true">
         <a class="icon48 dot sel" onclick="slideTo(1)">&#9679;</a>
