--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -6,9 +6,9 @@
 
             <details open>
                 <summary>Overview</summary>
-                <a href="./#summary">1. Summary</a>
-                <a href="./documentation.html#js">2. Religion</a>
-                <a href="./documentation.html#js">3. Culture</a>
+                <a href="./research/race-ethnicity">1. Summary</a>
+                <a href="./research/race-ethnicity/religion.html">2. Religion</a>
+                <a href="./research/race-ethnicity/culture.html">3. Culture</a>
             </details>
 
             <details open>
