--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <aside index="0"></aside>
     <aside index="1"></aside>
 </template>
-<div class="alert banner br0 pauto pt2 pb2 bcred white-">
+<div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
     <h1>About us</h1>
 </div>
 <article class="pauto">
