--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <base env="local:/;prod:/">
-    <link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">
+    <!--<link type="text/css" href="https://3el.github.io/front/dist/front.css" rel="stylesheet">-->
+    <link type="text/css" href="http://localhost:8888/dist/front.css" rel="stylesheet">
+    <link type="text/css" href="https://3el.github.io/front/dist/design/front/theme/front.css" rel="stylesheet">
     <link type="text/css" href="assets/css/theme.css?4" rel="stylesheet">
-    <script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>
-    <!--<script src="//localhost:8000/dist/front.js" lib="xhr;popup;nav;json;drag;i18n;physics"></script>-->
+    <!--<script src="https://3el.github.io/front/dist/front.js" lib="xhr;popup;nav;json;drag;i18n"></script>-->
+    <script src="http://localhost:8888/dist/front.js" lib="xhr;popup;nav;json;drag;i18n;physics"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0F425W2028"></script>
 </head>
 <body class="bg">
 
@@ -24,7 +27,7 @@
         </nav>
     </header>
 
-    <nav class="topbar white shade h4_5 gap2- sred- test-" selective="true">
+    <nav class="topbar white shade1 h4_5 gap2- sred- test-" selective="true">
         <button class="xl_du ml1 f2 bcwhite red" onclick="dom.toggle('aside?tag=0')">≡</button>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a href="research/linguistics" key="1">Linguistics</a>
