--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </div>
 <article class="pauto">
     <section>
-        <h4 class="tac">For all enquires, please email us using this form below.</h4>
+        <h4 class="tac">For all inquiries, please email us using this form below.</h4>
     </section>
     <section>
         <form>
