--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Race and Ethnicity" template="true"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Race and Ethnicity" template="../../"></script>
 
 <template>
     <aside index="0">
