--- a/research/race-ethnicity/religion.html
+++ b/research/race-ethnicity/religion.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Religion" template="true"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Religion" template="../../"></script>
 
 <article class="pauto">
     <h1>Religion</h1>
