--- a/research/race-ethnicity/religion.html
+++ b/research/race-ethnicity/religion.html
@@ -10,13 +10,13 @@
     </nav>
     
     <section class="mt2">
-    <p>The early Arameans were Polytheistic who believed in many gods.</p>
+    <p>The ancient Arameans were Polytheistic who believed and worshipped many deities such as Rimmon, Shamash, Nergal, and Atar, along with other Middle Eastern deities.</p>
     <br>
-    <p>It's believed that the first known Aramean who converted to Judaism was Naaman the Syrian after being healed by the God of Israel through Prophet Elisha.</p>
+    <p>It's believed that the first known Aramean who converted to Judaism was Naaman the Syrian after being healed by the God of Israel through Prophet Elisha in the Old Testament.</p>
     <br>
-    <p>In the first century, the majority of the Arameans adopted Christianity and accepted Jesus Christ as their Lord and Saviour.</p>
+    <p>In the first century, the Arameans and the Hebrews in Israel began to adopt Christianity as the fame of Jesus spread into Aram and Aram-Naharaim (Aramean homeland).</p>
     <br>
-    <p>The Arameans became the first nation to become Christians.</p>
+    <hr>
+    <small>Last update: 2020-12-23 19:20:34</small>
     </section>
-    
-    </article>
+</article>
