--- a/research/race-ethnicity/religion.html
+++ b/research/race-ethnicity/religion.html
@@ -10,7 +10,7 @@
     </nav>
     
     <section class="mt2">
-    <p>The ancient Arameans were Polytheistic who believed and worshipped many deities such as Rimmon, Shamash, Nergal, and Atar, along with other Middle Eastern deities.</p>
+    <p>The ancient Arameans were polytheists who believed and worshipped many deities such as Rimmon, Shamash, Nergal, and Atar, along with other Middle Eastern deities.</p>
     <br>
     <p>It's believed that the first known Aramean who converted to Judaism was Naaman the Syrian after being healed by the God of Israel through Prophet Elisha in the Old Testament.</p>
     <br>
