--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -60,7 +60,7 @@
 
 <a id="css"></a>
 <section class="mt2">
-    <p>Arameans also known as Syriacs or somtimes called Native Syrians are an ancient Semitic race from the Middle East, tracing its roots as far as the 1st millennium BC without any disruptions in the history timeline.</p>
+    <p>Arameans are also known as Syriacs or sometimes called Native Syrians are an ancient Semitic race from the Middle East, tracing its roots as far as the 1st millennium BC without any disruptions in the history timeline.</p>
     <br>
     <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Jordan, Sweden, Germany, France, Georgia, Iran, Ukraine, Brazil.</p>
 </section>
