--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -62,7 +62,10 @@
 <section class="mt2">
     <p>Arameans are also known as Syriacs or sometimes called Native Syrians are an ancient Semitic race from the Middle East, tracing its roots as far as the 1st millennium BC without any disruptions in the history timeline.</p>
     <br>
+    <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East.</p>
     <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Jordan, Sweden, Germany, France, Georgia, Iran, Ukraine, Brazil.</p>
+    <hr>
+    <small>Last update: 2020-12-23 22:07:39</small>
 </section>
 
 </article>
