--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -64,7 +64,7 @@
     <br>
     <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East.</p>
     <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Jordan, Sweden, Germany, France, Georgia, Iran, Ukraine, Brazil.</p>
-    <hr>
+    <hr class="mt2">
     <small>Last update: 2020-12-23 22:07:39</small>
 </section>
 
