--- a/research/race-ethnicity/religion.html
+++ b/research/race-ethnicity/religion.html
@@ -15,10 +15,8 @@
     <p>It's believed that the first known Aramean who converted to Judaism was Naaman the Syrian after being healed by the God of Israel through Prophet Elisha in the Old Testament.</p>
     <br>
     <p>In the first century, the Arameans and the Hebrews in Israel began to accept the Gospel quite rapidly as the message of Jesus spread into Israel, Aram and Aram-Naharaim (Aramean homeland). Christianity dominated in the region, until </p>
-    <br>
     <!--The Arameans together with Hebrews and Greeks established the first gentile church outside Jerusalem in Antioch and made , where . community Eventually ended up in Antioch amongs christianity reached The Kingdom of Urhoy where Abgar V Ukkama bar Ma'nu adopted Christianity and-->
-    
-    <hr>
+    <hr class="mt2">
     <small>Last update: 2020-12-23 19:20:34</small>
     </section>
 </article>
