--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -15,29 +15,18 @@
                 <summary>Culture</summary>
                 <details>
                     <summary>Language</summary>
-                    <a href="./docs/dev/dom.html">Aramaic</a>
+                    <a href="#">Old Aramaic</a>
+                    <a href="#">Official Aramaic</a>
+                    <a href="#">Middle Aramaic</a>
+                    <a href="#">Late Aramaic</a>
+                    <a href="#">Modern Aramaic</a>
                 </details>
                 <details>
-                    <summary>Template language</summary>
-                    <a href="./docs/dev/dom.html">Overview</a>
+                    <summary>Religion</summary>
+                    <a href="#">Paganism</a>
+                    <a href="#">Christianity</a>
                 </details>
-                <details>
-                    <summary>Style language</summary>
-                    <a href="./docs/dev/css/headings-paragraphs.html">Headings & paragraphs</a>
-                    <a href="./docs/dev/css/units.html">Units</a>
-                    <a href="">Colors</a>
-                    <a href="">Effects</a>
-                    <a href="">Animations</a>
-                </details>
-                <details>
-                    <summary>UI Components</summary>
-                    <a href="./docs/dev/alerts.html">Alerts</a>
-                    <a href="./docs/dev/buttons.html">Buttons</a>
-                    <a href="./docs/dev/forms.html">Forms</a>
-                    <a href="./docs/dev/menus.html">Menus</a>
-                    <a href="./docs/dev/navigations.html">Navigations</a>
-                    <a href="./docs/dev/views.html">Views</a>
-                </details>
+ 
             </details>
 
             <hr>
