--- a/index.html
+++ b/index.html
@@ -28,11 +28,19 @@
     </header>
 
     <nav class="topbar white shade1 h4_5 gap2- sred- test-" selective="true">
-        <button class="xl_du ml1 f2 bcwhite red" onclick="dom.toggle('aside?tag=0')">≡</button>
+        <a href="#menu" class="button xl_du bcwhite black p0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a href="research/race-ethnicity/" key="2">Race and Ethnicity</a>
         <a href="research/linguistics" key="1">Linguistics</a>
         <a href="research/software-technology/" key="3">Software Technology</a>
+
+        <div id="menu" class="modal menu">
+            <nav class="topbar flc0 shade h4_5 br0- gap2- sblack- test-">
+                <a href="#" class="button br0 xl_du bcwhite black p0 shade1 f2"><i class="icon32">&times;</i></a>
+                <figure class="pl2 pr2"><img src="assets/img/logo.png"></figure>
+            </nav>
+            <a href="research/race-ethnicity/" key="2">Race and Ethnicity</a>
+        </div>
     </nav>
     <aside class="xl_dn"></aside>
     <main include="home.html"></main>
