--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
         <a href="research/race-ethnicity/" key="2">Race and Ethnicity</a>
         <a href="research/linguistics" key="1">Linguistics</a>
-        <a href="research/software-technology/" key="3">Software Technology</a>
+        <a href="collection/statistics" key="1">Statistics</a>
+        <a href="development/software-technology/" key="3">Software Technology</a>
 
         <div id="menu" class="modal menu">
             <nav class="topbar flc0 shade h4_5 br0- gap2- sblack- test-">
