--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -38,6 +38,7 @@
 <h1>Overview</h1>
 <nav class="crumbs pointer pt05">
     <ol>
+        <li><a href="#">Research</a></li>
         <li><a href="#">Race and Ethnicity</a></li>
         <li>Overview</li>
     </ol>
