--- a/development/software-technology/index.html
+++ b/development/software-technology/index.html
@@ -10,7 +10,20 @@
         </ol>
     </nav>
 
-    <h2>Aramaic Keyboard</h2>
-    <a href="https://aramean.github.io/aramaic-keyboard" target="_blank">https://aramean.github.io/aramaic-keyboard</a>
+    <section class="mt2">
+        
+    </section>
+
+    <section class="mt2">
+        <h4>Aramaic Keyboard</h4>
+        <h6>Keyboard for MacOS</h6>
+        <i class="icon">🔗</i><a href="https://aramean.github.io/aramaic-keyboard" target="_blank">https://aramean.github.io/aramaic-keyboard</a>
+    </section>
+    
+    <section class="mt2">
+        <h4>The Slide Of Testimonies</h4>
+        <h6>Aramean & Syriac synonym</h6>
+        <i class="icon">🔗</i><a href="https://aramean.github.io/arameans/" target="_blank">https://aramean.github.io/arameans</a>
+    <section>
 
 </article>
