--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -46,13 +46,13 @@
 
 <a id="css"></a>
 <section class="mt2">
-    <p>Arameans are also known as Syriacs or sometimes called Native Syrians are an ancient Semitic race from the Middle East, tracing its roots as far as the 1st millennium BC without any disruptions in the history timeline.</p>
+    <p>Arameans or Syriacs is also known as Native Syrians are an ancient Semitic race from the Middle East, tracing its roots as far as the 1st millennium BC without any disruptions in the history timeline.</p>
     <br>
     <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East replacing earlier Semitic languages. The languages have undergone changes in its life but it has never ceased to exist as a spoken and written language. Aramaic is considered as one of the oldest ancient languages dating back to 900 BC, predating Hebrew and Arabic.</p>
     <br>
     <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Jordan, Sweden, Germany, and smaller populations are scattered in Diaspora. The population is estimated to be around 5 million excluding none native Syriacs from India.</p>
     <hr class="mt2">
-    <small>Last update: 2020-12-24 18:52</small>
+    <small>Last update: 2020-12-25 12:10</small>
 </section>
 
 </article>
