--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -46,7 +46,7 @@
 
 <a id="css"></a>
 <section class="mt2">
-    <p>Arameans or Syriacs, also known as Native Syrians are an ancient Semitic race from the Middle East, tracing its roots as far as the 1st millennium BC without any disruptions in the history timeline.</p>
+    <p>Arameans or Syriacs, also known as Native Syrians are an ancient Semitic race from the Middle East, tracing their roots as far as the 1st millennium BC without any disruptions in the history timeline.</p>
     <br>
     <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East replacing earlier Semitic languages. The languages have undergone changes in its life but it has never ceased to exist as a spoken and written language. Aramaic is considered as one of the oldest ancient languages dating back to 900 BC, predating Hebrew and Arabic.</p>
     <br>
