--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -48,9 +48,9 @@
 <section class="mt2">
     <p>Arameans or Syriacs, also known as Native Syrians are an ancient Semitic race from the Middle East, tracing their roots as far as the 1st millennium BC without any disruptions in the history timeline.</p>
     <br>
-    <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East replacing earlier Semitic languages. The languages have undergone changes in its life but it has never ceased to exist as a spoken and written language. Aramaic is considered as one of the oldest ancient languages dating back to 900 BC, predating Hebrew and Arabic.</p>
+    <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is one of the world's oldest recorded living languages, dating back to 900 BC and predating Hebrew and Arabic.</p>
     <br>
-    <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Jordan, Sweden, Germany, and smaller populations are scattered in Diaspora. The population is estimated to be around 5 million excluding none native Syriacs from India.</p>
+    <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Sweden, Germany, and smaller populations are scattered all around the globe. The total population is estimated to be around 5 million, excluding none Native Syriacs from India belonging to the Syrian Christian church.</p>
     <hr class="mt2">
     <small>Last update: 2020-12-25 12:10</small>
 </section>
