--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -46,7 +46,7 @@
 
 <a id="css"></a>
 <section class="mt2">
-    <p>Arameans or Syriacs, also known as Native Syrians are an ancient Semitic race from the Middle East, tracing their roots as far as the Bronze Age, without any disruptions in the history timeline. The first mention of the Arameans occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I, dated around 1100 BC.</p>
+    <p>Arameans or Syriacs, also known as Native Syrians, are an ancient Semitic race from the Middle East, tracing their roots back to the Bronze Age, without disruptions in the history timeline. The first mention of the Arameans occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I, dated around 1100 BC.</p>
     <br>
     <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is one of the world's oldest recorded living languages, dating back to 900 BC and predating Hebrew and Arabic.</p>
     <br>
