--- a/development/technology/index.html
+++ b/development/technology/index.html
@@ -1,7 +1,7 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Software Technology" template="../../"></script>
 
 <article class="pauto">
-    <h1>Overview</h1>
+    <h1>Technology</h1>
     <nav class="crumbs pointer pt05">
         <ol>
             <li><a href="#">Development</a></li>
