--- a/research/race-ethnicity/index.html
+++ b/research/race-ethnicity/index.html
@@ -7,8 +7,8 @@
             <details open>
                 <summary>Overview</summary>
                 <a href="./research/race-ethnicity">1. Summary</a>
-                <a href="./research/race-ethnicity/religion.html">2. Religion</a>
-                <a href="./research/race-ethnicity/culture.html">3. Culture</a>
+                <a href="./research/race-ethnicity/language.html">2. Language</a>
+                <a href="./research/race-ethnicity/religion.html">3. Religion</a>
             </details>
 
             <details open>
@@ -52,7 +52,7 @@
     <br>
     <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Sweden, Germany, and smaller populations are scattered all around the globe. The total population is estimated to be around 5 million, excluding none Native Syriacs from India belonging to the Syrian Christian church.</p>
     <hr class="mt2">
-    <small>Last update: 2020-12-26</small>
+    <small>Published: 2020-09-01, Last update: 2020-12-26</small>
 </section>
 
 </article>
