--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="research/race-ethnicity/" key="2">Race and Ethnicity</a>
         <a href="research/linguistics" key="1">Linguistics</a>
         <a href="collection/statistics" key="1">Statistics</a>
-        <a href="development/software-technology/" key="3">Software Technology</a>
+        <a href="development/technology/" key="3">Technology</a>
 
         <div id="menu" class="modal menu">
             <nav class="topbar flc0 shade h4_5 br0- gap2- sblack- test-">
