--- a/research/race-ethnicity/religion.html
+++ b/research/race-ethnicity/religion.html
@@ -17,6 +17,6 @@
     <p>In the first century, the Arameans and the Hebrews in Israel began to accept the Gospel and became Christians quite rapidly as the message of Jesus spread into Israel, Aram, and Aram-Naharaim. After the death och Jesus, the Christian community was established in Jerusalem, but later expanded into Aram, specifically Antioch, Damascus, and Urhoy.</p>
     <!--The Arameans together with Hebrews and Greeks established the first gentile church outside Jerusalem in Antioch and made , where . community Eventually ended up in Antioch amongs christianity reached The Kingdom of Urhoy where Abgar V Ukkama bar Ma'nu adopted Christianity and-->
     <hr class="mt2">
-    <small>Last update: 2020-12-26</small>
+    <small>Published: 2020-09-01, Last update: 2020-12-26</small>
     </section>
 </article>
