--- a/index.html
+++ b/index.html
@@ -21,26 +21,27 @@
             
         </form>
         <nav class="topbar light shade05 h3 gap2- test- z08 xl_dn" selective="true">
-            <a class="fr" href="membership.html" key="2">Membership</a>
-            <a class="pr2" href="about.html" key="3">About</a>
+            <a class="fr" href="membership.html" key="2">Contribute</a>
             <a class="pr2" href="contact.html" key="3">Contact</a>
+            <a class="pr2" href="faq.html" key="3">FAQ</a>
+            <a class="pr2" href="about.html" key="3">About</a>
         </nav>
     </header>
 
     <nav class="topbar white shade1 h4_5 gap2- sred- test-" selective="true">
         <a href="#menu" class="button xl_du bcwhite black p0 shade1"><i class="icon32">≡</i></a>
         <figure><a class="b0" href="./" target="_top" href2="home.html" key="0"><img src="assets/img/logo.png"></a></figure>
-        <a href="research/race-ethnicity/" key="2">Race and Ethnicity</a>
+        <a href="research/ethnology" key="2">Ethnology</a>
         <a href="research/linguistics" key="1">Linguistics</a>
         <a href="collection/statistics" key="1">Statistics</a>
-        <a href="development/technology/" key="3">Technology</a>
+        <a href="development/technology" key="3">Technology</a>
 
         <div id="menu" class="modal menu">
             <nav class="topbar flc0 shade h4_5 br0- gap2- sblack- test-">
                 <a href="#" class="button br0 xl_du bcwhite black p0 shade1 f2"><i class="icon32">&times;</i></a>
                 <figure class="pl2 pr2"><img src="assets/img/logo.png"></figure>
             </nav>
-            <a href="research/race-ethnicity/" key="2">Race and Ethnicity</a>
+            <a href="research/ethnology" key="2">Ethnology</a>
         </div>
     </nav>
     <aside class="xl_dn"></aside>
