--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Race and Ethnicity" template="../../"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Ethnology" template="../../"></script>
 
 <template>
     <aside index="1">
