--- a/contribute.html
+++ b/contribute.html
@@ -1,1 +1,10 @@
 <script src="https://3el.github.io/front/dist/front.js" title="Contribute" template="true"></script>
+
+<template>
+    <aside index="0"></aside>
+    <aside index="1"></aside>
+</template>
+
+<div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
+    <h1>Contribute</h1>
+</div>
