--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -35,24 +35,23 @@
 </template>
 
 <article class="pauto">
-<h1>Overview</h1>
-<nav class="crumbs pointer pt05">
-    <ol>
-        <li><a href="#">Research</a></li>
-        <li><a href="#">Race and Ethnicity</a></li>
-        <li>Overview</li>
-    </ol>
-</nav>
+    <h1>Overview</h1>
+    <nav class="crumbs pointer pt05">
+        <ol>
+            <li><a href="#">Research</a></li>
+            <li><a href="#">Ethnology</a></li>
+            <li>Overview</li>
+        </ol>
+    </nav>
 
-<a id="css"></a>
-<section class="mt2">
-    <p>Arameans or Syriacs, also known as Native Syrians, are an ancient Semitic race from the Middle East, tracing their roots back to the Bronze Age, without disruptions in the history timeline. The first mention of the Arameans occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I, dated around 1100 BC.</p>
-    <br>
-    <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is one of the world's oldest recorded living languages, dating back to 900 BC and predating Hebrew and Arabic.</p>
-    <br>
-    <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Sweden, Germany, and smaller populations are scattered all around the globe. The total population is estimated to be around 5 million, excluding none Native Syriacs from India belonging to the Syrian Christian church.</p>
-    <hr class="mt2">
-    <small>Published: 2020-09-01, Last update: 2020-12-26</small>
-</section>
+    <section class="mt2">
+        <p>Arameans or Syriacs, also known as Native Syrians, are an ancient Semitic race from the Middle East, tracing their roots back to the Bronze Age, without disruptions in the history timeline. The first mention of the Arameans occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I, dated around 1100 BC.</p>
+        <br>
+        <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is one of the world's oldest recorded living languages, dating back to 900 BC and predating Hebrew and Arabic.</p>
+        <br>
+        <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Sweden, Germany, and smaller populations are scattered all around the globe. The total population is estimated to be around 5 million, excluding none Native Syriacs from India belonging to the Syrian Christian church.</p>
+        <hr class="mt2">
+        <small>Published: 2020-09-01, Last update: 2020-12-26</small>
+    </section>
 
 </article>
