--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             
         </form>
         <nav class="topbar light shade05 h3 gap2- test- z08 xl_dn" selective="true">
-            <a class="fr" href="membership.html" key="2">Contribute</a>
+            <a class="fr" href="contribute.html" key="2">Contribute</a>
             <a class="pr2" href="contact.html" key="3">Contact</a>
             <a class="pr2" href="faq.html" key="3">FAQ</a>
             <a class="pr2" href="about.html" key="3">About</a>
