--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -6,9 +6,9 @@
 
             <details open>
                 <summary>Overview</summary>
-                <a href="./research/race-ethnicity">1. Summary</a>
-                <a href="./research/race-ethnicity/language.html">2. Language</a>
-                <a href="./research/race-ethnicity/religion.html">3. Religion</a>
+                <a href="./research/ethnology">1. Summary</a>
+                <a href="./research/ethnology/language.html">2. Language</a>
+                <a href="./research/ethnology/religion.html">3. Religion</a>
             </details>
 
             <details open>
