--- a/research/ethnology/religion.html
+++ b/research/ethnology/religion.html
@@ -4,7 +4,8 @@
     <h1>Religion</h1>
     <nav class="crumbs pointer pt05">
         <ol>
-            <li><a href="#">Race and Ethnicity</a></li>
+            <li><a href="#">Research</a></li>
+            <li><a href="#">Ethnology</a></li>
             <li>Relgion</li>
         </ol>
     </nav>
