--- a/faq.html
+++ b/faq.html
@@ -12,21 +12,21 @@
 <article class="pauto">
     <section>
         <nav class="tabs accordions">
-              <input type="radio" name="tabnewdemo" id="tab1">
+              <input type="radio" name="panel" id="tab1">
               <label for="tab1">Are the Syriacs and the Arameans the same?</label>
-              <section class="tabnewdemo">
+              <section>
                 <p>Yes, Native Syrians are the direct descendant of the Arameans.</p>
               </section>
             
-              <input type="radio" name="tabnewdemo" id="tab2">
+              <input type="radio" name="panel" id="tab2">
               <label for="tab2">What happened to the Aramean homeland?</label>
-              <section class="tabnewdemo">
+              <section>
                 <p>The Aramean homeland (Aram & Aram Naharaim) was conquered by many non-indigenous people such as Arabs, Ottomans, Assyrians, Kurds, Persians, Greeks, etc., however, Syria (Aram) is considered the modern homeland of the Arameans, but under Arab rule.</p>
               </section>
             
-              <input type="radio" name="tabnewdemo" id="tab3">
+              <input type="radio" name="panel" id="tab3">
               <label for="tab3">Why do Arameans call themselves Chaldeans or Assyrians?</label>
-              <section class="tabnewdemo">
+              <section>
                 <p>Due to the Colonization of the Middle East and, persecutions of Arameans, groups of the Arameans pledge alliances with the Westerners, in hope of being independent one day, and to restore the Middle East to its former glory. The ancient names such as Assyrians and Chaldeans were chosen accordingly to the geographical location of Assyria and Babylon provinces. The Syriac Churches of the East and the national separatist movements propagated the new identities amongst the people and created a bogus ethnology.</p>
               </section>
             </nav>
