--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -49,9 +49,9 @@
         <br>
         <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is one of the world's oldest recorded living languages (c. 900 BC), predating Hebrew and Arabic.</p>
         <br>
-        <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Sweden, Germany, and smaller populations are scattered all around the globe. The total population is estimated to be around 5 million, excluding none Native Syriacs from India belonging to the Syrian Christian church.</p>
+        <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Sweden, Germany, and smaller populations are scattered xaround the globe. The total population is estimated to be around 5 million, excluding none Native Syriacs from India belonging to the Syrian Christian church.</p>
         <hr class="mt2">
-        <small>Published: 2020-09-01, Last update: 2020-12-26</small>
+        <small>Published: 2020-09-01, Last update: 2020-12-27</small>
     </section>
 
 </article>
