--- a/research/ethnology/index.html
+++ b/research/ethnology/index.html
@@ -47,7 +47,7 @@
     <section class="mt2">
         <p>Arameans or Syriacs, also known as Native Syrians, are an ancient Semitic race from the Middle East, tracing their roots back to the Bronze Age, without disruptions in the history timeline. The first mention of the Arameans occurs in inscriptions discovered at Kalah-Shergat belonging to Tiglath Pileser I (c. 1100 BC). The terms Aramu, Armi, or Arame, are also mentioned in the Ebla tablets (c. 2300 BC), but with no evidence linked to the Arameans.</p>
         <br>
-        <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is one of the world's oldest recorded living languages (c. 900 BC), predating Hebrew and Arabic.</p>
+        <p>Aramaic is the language of the Aramean people and was once the lingua franca of the ancient Near East, replacing earlier Semitic languages. The language has developed through time and has been divided into East and West varieties, but it has never ceased to exist as a spoken or written language. Aramaic is one of the world's oldest recorded living languages (c. 900 BC), predating Hebrew and Arabic.</p>
         <br>
         <p>The largest Aramean populations today exist in Syria, Iraq, USA, Lebanon, Sweden, Germany, and smaller populations are scattered xaround the globe. The total population is estimated to be around 5 million, excluding none Native Syriacs from India belonging to the Syrian Christian church.</p>
         <hr class="mt2">
