--- a/faq.html
+++ b/faq.html
@@ -21,7 +21,7 @@
               <input type="radio" name="panel" id="tab2">
               <label for="tab2">What happened to the Aramean homeland?</label>
               <section>
-                <p>The Aramean homeland (Aram & Aram Naharaim) was conquered by many non-indigenous people such as Arabs, Ottomans, Assyrians, Kurds, Persians, Greeks, etc., however, Syria (Aram) is considered the modern homeland of the Arameans, but under Arab rule.</p>
+                <p>The Aramean homeland (Aram & Aram Naharaim) was conquered by many non-indigenous people such as Assyrians, Persians, Romans, Arabs, Ottomans, Kurds, etc., however, Syria (Aram) is considered the modern homeland of the Arameans, but under Arab rule.</p>
               </section>
             
               <input type="radio" name="panel" id="tab3">
