--- a/faq.html
+++ b/faq.html
@@ -15,7 +15,7 @@
               <input type="radio" name="panel" id="tab1">
               <label for="tab1">Are the Syriacs and the Arameans the same?</label>
               <section>
-                <p>Yes, Native Syrians are the direct descendant of the Arameans.</p>
+                <p>Yes, Native Syrians are the direct descendant of the Arameans. "Syriac; Syrian" is a Greek term meaning Aramean.</p>
               </section>
             
               <input type="radio" name="panel" id="tab2">
