--- a/about.html
+++ b/about.html
@@ -1,19 +1,34 @@
-<script src="https://3el.github.io/front/dist/front.js" title="About us" template="true"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="About Us" template="true"></script>
 
 <template>
     <aside index="0"></aside>
     <aside index="1"></aside>
 </template>
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>About us</h1>
+    <h1>About Us</h1>
 </div>
 <article class="pauto">
     <section>
+        <p>The Aramean Institute is a multi-institute for the Aramean people researching different areas, developing technology, collecting data, educating, offering expertise, and publishing work.</p>    
+    </section>
+    <section class="mt2">
         <h2>Mission</h2>
-        <p>Our mission is to increase the awareness of Arameans to the outside world and provide reliable-trusted knowledge about the Aramean people.</p>
-        <p>It includes correcting Non-Academic studies or tackling misleading knowledge about the Arameans or related to the people so that we may preserve and protect the ancient heritage and language.</p>
+        <p>Our mission is to connect and build long-term relationships with companies, organizations, and private people from all nations, provide reliable-trusted knowledge and data, offer free services, and support everyone about the Aramean people.</p>
         <br>
-        <p>We work with culture, technology, education, science, and business to strengthen relationships and development within the private, public, and voluntary sectors.</p>
+        <p>Our main objective is to protect, populate, and preserve the continuous ancient Aramean heritage.</p>
+        <br>
+        <p>The Aramean Institute's standard work approaches are:</p>
+        <ul class="list">
+            <li>Correcting misleading, unlogic, or false knowledge about the Arameans.</li>
+            <li>Providing free, reliable-trusted information and data about the Arameans.</li>
+            <li>Developing free software related to the Arameans.</li>
+            <li>Increasing the awareness of Arameans to the outside world.</li>
+            <li>Guiding and supporting projects related to the Arameans.</li>
+        </ul>
+    </section>
+    <section class="mt2">
+        <h2>Vision</h2>
+        <p>Reliable</p>
     </section>
     <section class="mt2">
         <h2>History</h2>
@@ -21,7 +36,7 @@
     </section>
     <section class="mt2">
         <h2>Principles</h2>
-        <p>The Aramean Institute of Arameans follows the principles of Science and has built the foundation on academic studies made by reliable, respected, and world-leading scholars.
+        <p>The Aramean Institute follows the principles of Science and has built the foundation on academic studies made by reliable, respected, and world-leading scholars.
         <br><br>
         <p>The institute rejects:</p>
         <ul class="list">
