--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<script src="https://3el.github.io/front/dist/front.js" title="Contact us" template="true"></script>
+<script src="https://3el.github.io/front/dist/front.js" title="Contact Us" template="true"></script>
     
 <template>
     <aside index="0"></aside>
@@ -6,7 +6,7 @@
 </template>
 
 <div class="alert banner shade1 br0 pauto pt2 pb2 bcred white-">
-    <h1>Contact us</h1>
+    <h1>Contact Us</h1>
 </div>
 
 <article class="pauto">
