--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     </section>
     <section class="mt2">
         <h2>Mission</h2>
-        <p>Our mission is to connect and build long-term relationships with companies, organizations, and private people from all nations, provide reliable-trusted knowledge and data, offer free services, and support everyone about the Aramean people.</p>
+        <p>Our mission is to connect and build long-term relationships with companies, organizations, and private people from all nations, provide reliable-trusted knowledge and data, offer free services, and share our expertise about or related to the Aramean people.</p>
         <br>
         <p>Our main objective is to protect, populate, and preserve the continuous ancient Aramean heritage.</p>
         <br>
