--- a/about.html
+++ b/about.html
@@ -15,8 +15,6 @@
         <h2>Mission</h2>
         <p>Our mission is to connect and build long-term relationships with companies, organizations, and private people from all nations, provide reliable-trusted knowledge and data, offer free services, and share our expertise about or related to the Aramean people.</p>
         <br>
-        <p>Our main objective is to protect, populate, and preserve the continuous ancient Aramean heritage.</p>
-        <br>
         <p>The Aramean Institute's standard work approaches are:</p>
         <ul class="list">
             <li>Correcting misleading, unlogic, or false knowledge about the Arameans.</li>
@@ -24,11 +22,12 @@
             <li>Developing free software related to the Arameans.</li>
             <li>Increasing the awareness of Arameans to the outside world.</li>
             <li>Guiding and supporting projects related to the Arameans.</li>
+            <li>Translating Aramaic to 
         </ul>
     </section>
     <section class="mt2">
         <h2>Vision</h2>
-        <p>Reliable</p>
+        <p>Our vision is to protect, populate, and preserve the continuous ancient Aramean heritage.</p>
     </section>
     <section class="mt2">
         <h2>History</h2>
